- added option pane to notify about new version